--- a/app/src/main/res/layout/activity_locator.xml
+++ b/app/src/main/res/layout/activity_locator.xml
@@ -10,8 +10,9 @@
 
     <TextView
         android:id="@+id/showLocation"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:hint="Location"
         android:textSize="20sp" />
     <Button
